Create spring-boot-health module
Closes gh-46155